fix: alignment of jump-to-section flyout

--- a/src/_includes/nav-styles.scss
+++ b/src/_includes/nav-styles.scss
@@ -39,21 +39,28 @@
   }
 
   .jump-to-section__container {
-    margin-left: 10px;
-    position: relative;
-
     $desktop-btn-size: 48px;
 
+    .jump-to-section__navigation {
+      position: relative;
+      width: 100%;
+      height: 100%;
+
+      @include mobile {
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+      }
+    }
+
     @include mobile {
-      overflow: hidden;
       margin-left: 0;
       width: 100%;
       height: 100%;
-      display: flex;
-      align-items: center;
     }
 
     @include tablet-and-up {
+      margin-left: 10px;
       width: $desktop-btn-size;
       height: $desktop-btn-size;
       transition: opacity 0.2s, transform 0.2s;
